--- a/JSWeb-exams/Crypto-Trade/package.json
+++ b/JSWeb-exams/Crypto-Trade/package.json
@@ -16,7 +16,8 @@
     "express-handlebars": "^6.0.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "validator": "^13.7.0"
   },
   "description": ""
 }
