--- a/JS Applications-exams/Meme Lounge/package.json
+++ b/JS Applications-exams/Meme Lounge/package.json
@@ -5,21 +5,20 @@
     "main": "index.html",
     "scripts": {
         "test": "mocha tests",
-        "start": "http-server -a localhost -p 3000 -P http://localhost:3000?"
+        "start": "http-server -a localhost -p 3000 -P http://localhost:3000?",
+        "dev": "lite-server"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "lit-html": "1.3.0",
-        "page": "1.11.6",
-        "playwright": "^1.29.0-alpha-nov-24-2022",
-        "playwright-chromium": "^1.28.1"
+        "lite-server": "^2.6.1",
+        "page": "1.11.6"
     },
     "devDependencies": {
         "chai": "4.3.4",
         "http-server": "0.12.3",
         "mocha": "8.3.2",
-        "playwright": "^1.29.0-alpha-nov-24-2022",
-        "playwright-chromium": "^1.28.1"
+        "playwright-chromium": "1.9.2"
     }
 }
