--- a/JSWeb-exams/Wildlife-Photography/package.json
+++ b/JSWeb-exams/Wildlife-Photography/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
