--- a/JSWeb-exams/Charity-Christmas/package.json
+++ b/JSWeb-exams/Charity-Christmas/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^6.0.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "validator": "^13.7.0"
   }
 }
