--- a/RESTful Workshop/Client/package.json
+++ b/RESTful Workshop/Client/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "restful-workshop",
+  "name": "01.Furniture",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^6.8.2",
-    "nodemon": "^2.0.20"
+    "lit-html": "^1.3.0",
+    "page": "^1.11.6"
   }
 }
