--- a/RESTful Workshop/Client/package.json
+++ b/RESTful Workshop/Client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "01.Furniture",
+  "name": "01.furniture",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "lit-html": "^1.3.0",
+    "lite-server": "^2.6.1",
     "page": "^1.11.6"
   }
 }
