--- a/RESTful Workshop/server/package.json
+++ b/RESTful Workshop/server/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
+    "lite-server": "^2.6.1",
     "mongoose": "^6.8.2",
     "nodemon": "^2.0.20"
   }
