--- a/JSWeb-exams/auction-house 2/package.json
+++ b/JSWeb-exams/auction-house 2/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "epxress": "^0.0.1-security",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6",
+    "express-handlebars": "^6.0.7",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.5",
-    "nodemon": "^2.0.20"
+    "mongoose": "^6.10.5",
+    "nodemon": "^2.0.22"
   }
 }
